# my_doc_tool

./: .env  .gitignore  MyTool.spec  app.py  favo.icns  main.py  pk.sh  pyproject.toml  resource_util.py
.github/workflows/: main.yml  release.yml
backend/: agent.py  excel_utils.py  mermaid_utils.py  resolver.py
mylog/: log.py
