[project]
name = "my-tool-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "openai>=1.93.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "py2app>=0.28.8",
    "pyinstaller>=6.14.2",
    "pyqt6>=6.9.1",
    "xlrd>=2.0.2",
]
